--- a/nonograms/src/scss/style.scss
+++ b/nonograms/src/scss/style.scss
@@ -1,1 +1,10 @@
 
+// constants
+@import "abstract/constants";
+@import "abstract/mixins";
+
+// base
+@import 'base/base';
+
+// layout
+@import 'layout/playing-field';
