refactor: create game field by table

--- a/nonograms/src/scss/abstract/_constants.scss
+++ b/nonograms/src/scss/abstract/_constants.scss
@@ -1,5 +1,6 @@
 :root {
-  --cell: 28px;
+  --size: 15;
+  --cell: 85px;
   --border-color-light: #0000004d;
   --border-color-dark: #000000c2;
   --background: #ffe2a3;
