--- a/nonograms/src/scss/abstract/_mixins.scss
+++ b/nonograms/src/scss/abstract/_mixins.scss
@@ -1,4 +1,12 @@
-@mixin borderes($side) {
+//@mixin borderes($side) {
+//  &:not(:last-child) {
+//    border-#{$side}: 1px solid var(--border-color-light);
+//  }
+//  &:nth-child(5n+1) {
+//    border-color: var(--border-color-dark);
+//  }
+//}
+@mixin border($side) {
   &:not(:last-child) {
     border-#{$side}: 1px solid var(--border-color-light);
   }
