--- a/nonograms/src/scss/layout/_playing-field.scss
+++ b/nonograms/src/scss/layout/_playing-field.scss
@@ -7,66 +7,46 @@
   background-color: var(--background);
   gap: 2dvh;
   color: var(--text-color);
+  padding: .5rem;
+}
 
-  .field {
-    border: 1px solid var(--border-color-dark);
-    background-color: #fff;
+.table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  border: 1px solid var(--border-color-dark);
 
-    .row:nth-child(1) {
-
-      .cell {
-        display: flex;
-        flex-direction: column;
-        height: auto;
-
-        &:nth-child(1){
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          align-items: center;
-        }
-      }
-    }
-
-    .cell {
-      display: flex;
-      justify-content: end;
-      align-items: center;
-      gap: 0.5rem;
-      padding: 0.3rem;
-
-      &:nth-child(1){
-        display: flex;
-        justify-content: center;
-        width: max-content;
-      }
-
-      img {
-        width: 100%;
-        max-width: var(--cell);
-      }
-    }
-    .hint {
-      background-color: var(--hint-bg);
-    }
-    .hint_column {
-      width: fit-content;
-    }
+  img {
+    width: 100%;
+    //max-width: var(--cell);
   }
-}
 
-.row {
-  @include borderes(bottom);
-  display: flex;
-  justify-content: end;
-}
+  td,
+  th {
+    width: var(--cell);
+    height: var(--cell);
+    aspect-ratio: 1;
+    @include border(right)
+  }
 
-.cell {
-  @include borderes(right);
-  width: var(--cell);
-  height: var(--cell);
+  tr {
+    @include border(bottom)
+  }
 
-  &.dark {
-    background-color: var(--border-color-dark);
+  .hint {
+    background-color: var(--hint-bg);
+  }
+
+  .hint_row {
+    display: flex;
+    justify-content: flex-end;
+    gap: .5rem;
+    padding: 0 .3rem;
+  }
+
+  .hint_column {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
   }
 }
