feat: add mouse and touch handler on game field

--- a/nonograms/src/scss/abstract/_constants.scss
+++ b/nonograms/src/scss/abstract/_constants.scss
@@ -1,11 +1,12 @@
 :root {
   --size: 15;
-  --cell: 85px;
+  --cell: 30px;
   --border-color-light: #0000004d;
   --border-color-dark: #000000c2;
   --background: #ffe2a3;
   --text-color: #000000;
   --hint-bg: #eeeeee;
+  --x-color: red;
 }
 
 .theme-dark {
