--- a/nonograms/src/scss/layout/_playing-field.scss
+++ b/nonograms/src/scss/layout/_playing-field.scss
@@ -10,6 +10,16 @@
   padding: .5rem;
 }
 
+.cell {
+  text-align: center;
+  vertical-align: center;
+  color: var(--x-color);
+}
+
+.cell-on {
+  background-color: var(--border-color-dark);
+}
+
 .table {
   border-spacing: 0;
   border-collapse: collapse;
