--- a/nonograms/src/scss/layout/_difficult.scss
+++ b/nonograms/src/scss/layout/_difficult.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
 }
-.tab {
+.tabs {
   width: 100%;
   display: flex;
   gap: .5rem;
@@ -35,6 +35,9 @@
   background-color: #ccc;
 }
 
+.tab-content.active{
+  display: flex;
+}
 .tab-content {
   display: none;
   //border: 1px solid #ccc;
