--- a/nonograms/src/scss/layout/_playing-field.scss
+++ b/nonograms/src/scss/layout/_playing-field.scss
@@ -10,6 +10,16 @@
   padding: .5rem;
 }
 
+.field {
+  border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  aspect-ratio: 1;
+  max-width: 600px;
+}
+
 .cell {
   text-align: center;
   vertical-align: center;
@@ -25,6 +35,9 @@
   border-collapse: collapse;
   border: 1px solid var(--border-color-dark);
 
+  .hint-c img{
+    display: flex;
+  }
   img {
     width: 100%;
     //max-width: var(--cell);
