--- a/nonograms/src/scss/layout/_header.scss
+++ b/nonograms/src/scss/layout/_header.scss
@@ -1,15 +1,13 @@
-.options {
+.header {
+  width: 100%;
+  max-width: 500px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 50rem;
-  width: 100%;
-  gap: 1rem;
-  //flex-wrap: wrap;
 }
 
-.options__buttons{
-  //flex: 1 1 5rem;
+.scores {
+  //flex: 1 1 100rem;
   //display: flex;
   //justify-content: center;
   //align-items: center;
@@ -21,6 +19,10 @@
   //transition: .3s;
 }
 
-.options__buttons:hover {
-  //background-color: #ac8f65;
+.themes {
+  width: 3rem;
+  height: 3rem;
+  background-color: #4b3564;
+  border-radius: 50%;
+  cursor: pointer;
 }
