fix: hover effect on touch screen

--- a/nonograms/src/scss/base/_buttons.scss
+++ b/nonograms/src/scss/base/_buttons.scss
@@ -10,10 +10,12 @@
   cursor: pointer;
   transition: .3s;
 }
-
-.btn:hover {
-  background-color: #ac8f65;
+@media (hover: hover) and (pointer: fine) {
+  .btn:hover {
+    background-color: #ac8f65;
+  }
 }
+
 .btn.active {
   background-color: #ac8f65;
 }
