feat: add modal class and show best scores

--- a/nonograms/src/scss/abstract/_constants.scss
+++ b/nonograms/src/scss/abstract/_constants.scss
@@ -7,6 +7,8 @@
   --text-color: #000000;
   --hint-bg: #eeeeee;
   --x-color: red;
+  --modal-background-color: #ffffff;
+  --color-overlay: rgba(80, 80, 80, 0.4);
 }
 
 .theme-dark {
