--- a/nonograms/src/scss/layout/_header.scss
+++ b/nonograms/src/scss/layout/_header.scss
@@ -22,7 +22,7 @@
 .themes {
   width: 3rem;
   height: 3rem;
-  background-color: #4b3564;
+  background-color: #800080;
   border-radius: 50%;
   cursor: pointer;
 }
