refactor: change some colors

--- a/nonograms/src/scss/abstract/_constants.scss
+++ b/nonograms/src/scss/abstract/_constants.scss
@@ -4,7 +4,7 @@
   --border-color-light: #0000004d;
   --border-color-dark: #000000c2;
   --background: #ffe2a3;
-  --text-color: #000000;
+  --text-color: #8B4513;
   --hint-bg: #FFDAB9;
   --x-color: red;
   --accent-color: #d2691e;
@@ -22,7 +22,7 @@
   --hint-bg: #2c2a346e;
 
   --accent-color: #4B0082;
-  --modal-background-color: #9370DB;
-  --button-color: #4B0082;
-  --button-hover-color: #483D8B;
+  --modal-background-color: #483D8B;
+  --button-color: #483D8B;
+  --button-hover-color: #8448D3;
 }
