--- a/nonograms/src/scss/layout/_playing-field.scss
+++ b/nonograms/src/scss/layout/_playing-field.scss
@@ -11,7 +11,7 @@
 }
 
 .field {
-  border: 1px solid #000;
+  //border: 1px solid #000;
   display: flex;
   justify-content: center;
   align-items: center;
