refactor: change position options on layout, add media query

--- a/nonograms/src/scss/abstract/_constants.scss
+++ b/nonograms/src/scss/abstract/_constants.scss
@@ -1,6 +1,6 @@
 :root {
   --size: 15;
-  --cell: 30px;
+  --cell: 3rem;
   --border-color-light: #0000004d;
   --border-color-dark: #000000c2;
   --background: #ffe2a3;
