--- a/nonograms/src/scss/layout/_difficult.scss
+++ b/nonograms/src/scss/layout/_difficult.scss
@@ -1,14 +1,18 @@
 .difficult{
   //border: 1px solid #ccc;
-  max-width: 50rem;
+  max-width: 70rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  padding: 2rem 0;
 }
 .tabs {
-  width: 100%;
   display: flex;
+  justify-content: center;
   gap: .5rem;
+  width: 100%;
   //padding: .7rem;
   overflow: hidden;
   //border: 1px solid #ccc;
@@ -42,6 +46,7 @@
 .tab-content {
   display: none;
   //border: 1px solid #ccc;
+  justify-content: center;
   width: 100%;
   gap: .5rem;
   border-top: none;
