--- a/nonograms/src/scss/layout/_options.scss
+++ b/nonograms/src/scss/layout/_options.scss
@@ -1,14 +1,23 @@
 .options {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 50rem;
+  flex-direction: column;
+  justify-content: center;
+  //justify-content: space-between;
+  //align-items: center;
+  //max-width: 50rem;
   width: 100%;
   gap: 1rem;
+  padding: 2rem 0;
   //flex-wrap: wrap;
 }
-
-.options__buttons{
+.options__buttons.btn{
+  flex: 1 0 16rem;
+}
+.options__buttons {
+  max-height: 3.2rem;
+  max-width: 16rem;
+  width: 100%;
+  white-space: nowrap;
   //flex: 1 1 5rem;
   //display: flex;
   //justify-content: center;
@@ -23,4 +32,13 @@
 
 .options__buttons:hover {
   //background-color: #ac8f65;
+}
+
+@media (width <= 768px) {
+  .options {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 }
