--- a/nonograms/src/scss/base/_modal.scss
+++ b/nonograms/src/scss/base/_modal.scss
@@ -28,7 +28,14 @@
   top: 2rem;
   right: 2rem;
   cursor: pointer;
+
   svg {
     pointer-events: none;
+  }
+}
+
+@media (width <= 410px) {
+  .modal {
+    padding: 4rem 2rem;
   }
 }
