refactor: button style in media query

--- a/nonograms/src/scss/layout/_playing-field.scss
+++ b/nonograms/src/scss/layout/_playing-field.scss
@@ -95,7 +95,7 @@
     max-width: 58rem;
   }
   .container{
-    //justify-content: space-between;
+    justify-content: space-evenly;
     gap: 0;
   }
 }
