feat: add theme switcher

--- a/nonograms/src/scss/abstract/_constants.scss
+++ b/nonograms/src/scss/abstract/_constants.scss
@@ -12,6 +12,7 @@
   --color-overlay: rgba(80, 80, 80, 0.4);
   --button-color: #DEB887;
   --button-hover-color: #C1A075;
+  --slider-round: #000000c2;
 }
 
 .theme-dark {
@@ -25,4 +26,5 @@
   --modal-background-color: #483D8B;
   --button-color: #483D8B;
   --button-hover-color: #8448D3;
+  --slider-round: #e3bfbf;
 }
