--- a/nonograms/src/scss/style.scss
+++ b/nonograms/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "base/buttons";
 @import "base/modal";
 @import "base/media";
+@import "base/switch-theme";
 
 // layout
 @import "layout/header";
