--- a/news-api/src/components/view/news/news.css
+++ b/news-api/src/components/view/news/news.css
@@ -1,7 +1,14 @@
+.news {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .news__item {
+    max-width: 700px;
+    flex: 0 1 700px;
     display: flex;
     flex-direction: column;
-    margin: 1rem auto;
+    margin: 1rem;
     margin-bottom: 1.6%;
     background: #fff;
     color: #333;
