--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -1,3 +1,45 @@
+.source-container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #ffffff;
+    font-size: 16px;
+    max-width: 700px;
+    padding: 10px;
+    margin: 0 auto;
+    height: 3rem;
+    position: relative;
+    user-select: none;
+}
+
+.source-container .sources_dropdown:hover {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: auto;
+    max-height: 60dvh;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #92d2f9 transparent;
+}
+
+.source-container .sources_dropdown {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: absolute;
+    top: -1.1rem;
+    height: 70px;
+    padding-top: .6rem;
+    background-color: #17181c;
+    border: 2px solid #92d2f8;
+    border-radius: 10px;
+    box-shadow: 0 0.5em 0.5em -0.4em #01a1f8;
+    z-index: 100;
+    transition: all .8s;
+    overflow: hidden;
+}
+
 .sources {
     display: flex;
     flex-wrap: nowrap;
@@ -11,6 +53,7 @@
 .source__item {
     background: none;
     border: 2px solid #30c5ff;
+    border-radius: 10px;
     font: inherit;
     line-height: 1;
     margin: 0.5em;
