refactor: change text color

--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -59,15 +59,15 @@
     margin: 0.5em;
     padding: 1em 2em;
     color: #70d6ff;
-    transition: 0.25s;
+    transition: 0.35s;
     cursor: pointer;
 }
 
 .source__item:hover,
 .source__item:focus {
-    border-color: #3fcc59;
-    color: #69db7e;
-    box-shadow: 0 0.5em 0.5em -0.4em #3fcc59;
+    border-color: #c128df;
+    color: #C54DD5;
+    box-shadow: 0 0.5em 0.5em -0.4em #c128df;
     transform: translateY(-0.25em);
 }
 
