--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,7 @@
+html {
+  font-size: 10px;
+}
+
 body {
   background: url("./assets/images/start-screen.png") no-repeat center fixed;
   background-size: cover;
