--- a/src/app/components/view/login-form/login-form.scss
+++ b/src/app/components/view/login-form/login-form.scss
@@ -2,46 +2,60 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  padding: 4rem 4rem;
-  max-width: 22rem;
+  padding: 5rem 5rem;
+  max-width: 24rem;
+  width: 100%;
   border-radius: 1rem;
-  background-color: rgba(205, 214, 219, 0.3);
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-color: rgba(205, 214, 219, 0.5);
+}
+
+.first-name,
+.last-name {
+  position: relative;
+  display: flex;
 }
 
 .login-form {
   display: flex;
   flex-direction: column;
+  gap: 1.5rem;
   width: 100%;
 
   input {
-    margin-bottom: 1rem;
+    font-size: 2.4rem;
+    margin-bottom: 1.2rem;
     padding: 0.8rem;
-    border: 1px solid #ccc;
-    border-radius: 0.4rem;
+    border: 2px solid #ccc;
+    border-radius: 0.7rem;
+    outline: none;
     transition: border-color 0.3s ease-in-out;
+    width: 100%;
 
     &.invalid {
       border-color: red;
     }
+    &:focus {
+      border-color: #007bff;
+    }
   }
 
   .error-messages {
+    //display: none;
+    position: absolute;
+    bottom: -1rem;
+    left: .5rem;
+    font-size: 1.6rem;
     color: red;
-    font-size: 1.4rem;
-    margin-top: .5rem;
   }
 
   button {
-    padding: 10px;
+    padding: 1rem;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-size: 2.4rem;
     transition: background-color 0.3s ease-in-out;
 
     &:hover {
