--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 html {
   font-size: 10px;
 }
@@ -5,4 +9,9 @@ html {
 body {
   background: url("./assets/images/start-screen.png") no-repeat center fixed;
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh;
+  padding: 0 5px;
 }
