--- a/src/app/components/view/login-form/login-form.scss
+++ b/src/app/components/view/login-form/login-form.scss
@@ -7,6 +7,12 @@
   width: 100%;
   border-radius: 1rem;
   background-color: rgba(205, 214, 219, 0.5);
+  transition: opacity 0.3s ease;
+}
+
+.hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .first-name,
