--- a/src/global.scss
+++ b/src/global.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
 html {
   font-size: 10px;
 }
@@ -12,6 +13,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100dvh;
+  height: 100vh;
   padding: 0 5px;
+  overflow: hidden;
 }
