--- a/src/app/components/view/start-screen/start-screen.scss
+++ b/src/app/components/view/start-screen/start-screen.scss
@@ -22,10 +22,14 @@
 }
 
 .game-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex: 1;
   width: 100%;
 }
 
+.start-game-button,
 .logout-button {
   padding: 1.2rem 3.2rem;
   background-color: #007bff;
@@ -48,4 +52,24 @@
 .hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.greeting {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(205, 214, 219, 0.6);;
+  gap: 1.6rem;
+  max-width: 40rem;
+  font-size: 2rem;
+  border-radius: 1rem;
+  padding: 2rem;
+  font-weight: bold;
+  color: #3d3d3d;
+  transition: opacity 0.2s ease;
+
+  p {
+    text-align: center;
+  }
 }
