--- a/src/app/components/view/login-form/login-form.scss
+++ b/src/app/components/view/login-form/login-form.scss
@@ -29,6 +29,7 @@
 
   input {
     font-size: 2.4rem;
+    font-family: "Stylish", serif;
     margin-bottom: 1.2rem;
     padding: 0.8rem;
     border: 2px solid #ccc;
@@ -51,21 +52,23 @@
     bottom: -1rem;
     left: .5rem;
     font-size: 1.6rem;
+    font-family: "Stylish", serif;
     color: red;
   }
 
   button {
     padding: 1rem;
-    background-color: #007bff;
+    background-color: var(--button-bg-color);
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 2.4rem;
+    font-family: "Stylish", serif;
     transition: background-color 0.3s ease-in-out;
 
     &:hover {
-      background-color: #0056b3;
+      background-color: var(--button-hover-bg-color);
     }
 
     &:disabled {
