refactor: class structure, and add css variable for background

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,7 @@
 :root {
   --button-bg-color: #9d596b;
   --button-hover-bg-color: #7e3843;
+  --transparent-bg: rgba(205, 214, 219, 0.5);
 }
 * {
   margin: 0;
