--- a/src/app/components/view/game/game.scss
+++ b/src/app/components/view/game/game.scss
@@ -1,7 +1,9 @@
 .game-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 100%;
-  //background-color: #007bff;
   transition: opacity 0.2s ease;
 }
 
