--- a/src/app/components/view/login-form/login-form.scss
+++ b/src/app/components/view/login-form/login-form.scss
@@ -6,7 +6,7 @@
   max-width: 24rem;
   width: 100%;
   border-radius: 1rem;
-  background-color: rgba(205, 214, 219, 0.5);
+  background-color: var(--transparent-bg);
   transition: opacity 0.2s ease;
 }
 
