--- a/src/app/components/view/start-screen/start-screen.scss
+++ b/src/app/components/view/start-screen/start-screen.scss
@@ -62,7 +62,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(205, 214, 219, 0.6);;
+  background-color: var(--transparent-bg);
   gap: 1.6rem;
   max-width: 40rem;
   font-size: 2.4rem;
