feat: add garage class, and getCars api

--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -1,7 +1,8 @@
 html {
   font-size: 10px;
+  font-family: "Stylish", serif;
 }
 
 body {
-  background-color: burlywood;
+  background-color: #939393;
 }
