--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -1,7 +1,7 @@
 .page-buttons-container {
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 1rem 0;
   width: 30rem;
 }
 
