--- a/client/src/app/garage/garage.scss
+++ b/client/src/app/garage/garage.scss
@@ -3,9 +3,10 @@
   justify-content: flex-start;
   gap: 3rem;
   margin-top: 1rem;
-  padding: .3rem;
-  width: 45rem;
+  //padding: .3rem;
+  width: 35rem;
   font-size: 1.6rem;
+  user-select: none;
 
   p {
     padding: .8rem 2.2rem;
@@ -14,4 +15,15 @@
     color: #000;
     font-weight: bold;
   }
+}
+
+.garage-list {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 1rem;
+  margin: 1rem auto 1.5rem;
+  //width: 100%;
+  border-radius: .3rem;
+  row-gap: 1rem;
 }
