--- a/client/src/app/car/car.scss
+++ b/client/src/app/car/car.scss
@@ -53,4 +53,54 @@
     height: 30px;
     right: 35px;
   }
+
+  .start {
+    padding: 2px 7px;
+    color: #fff;
+    background-color: blueviolet;
+    //background-color: rgb(24, 199, 24);
+    cursor: pointer;
+    transition: .3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
+  .stop {
+    padding: 2px 7px;
+    color: #fff;
+    background-color: royalblue;
+    cursor: pointer;
+    transition: .3s;
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+  .stop:disabled {
+    transform: scale(0.95);
+    background-color: dimgray;
+    cursor: not-allowed;
+    color: #fff;
+  }
+
+  button {
+    font-family: "Stylish", serif;
+    font-size: 1.6rem;
+    border: none;
+    padding: 0 1rem;
+    font-weight: 600;
+    border-radius: 4px;
+    color: #2b2b2b;
+    background-color: #fff;
+    cursor: pointer;
+    transition: .3s;
+    height: 25px;
+
+    &:hover {
+      background-color: mediumspringgreen;
+      box-shadow: 0 0 0;
+      color: #2b2b2b;
+    }
+  }
 }
