feat: implement race start method

--- a/client/src/app/garage/modal.scss
+++ b/client/src/app/garage/modal.scss
@@ -14,10 +14,11 @@
 .modal-title {
   font-size: 6vw;
   margin: 0 auto;
-  color: #f4ca16;
-  padding: 20px 15px;
-  border-radius: 25%;
-  background-color: #fff;
-  border: 3px solid dimgray;
-  text-shadow: 0 0 3px black;
+  color: darkorange;
+  padding: 2.5rem;
+  border-radius: 2.5rem;
+  background-color: blueviolet;
+  //border: 3px solid blueviolet;
+  text-shadow: 0 0 3px #2b2b2b;
+  box-shadow: 0 0 3px #2b2b2b;
 }
