--- a/client/src/app/garage/modal.scss
+++ b/client/src/app/garage/modal.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
+  padding: 0 1rem;
   top: 0;
   left: 0;
   background-color: rgba(120, 120, 120, 0.4);
@@ -12,13 +13,12 @@
 }
 
 .modal-title {
-  font-size: 6vw;
+  font-size: 3rem;
   margin: 0 auto;
   color: darkorange;
   padding: 2.5rem;
   border-radius: 2.5rem;
   background-color: blueviolet;
-  //border: 3px solid blueviolet;
   text-shadow: 0 0 3px #2b2b2b;
   box-shadow: 0 0 3px #2b2b2b;
 }
