--- a/client/src/app/components/paginationButton.scss
+++ b/client/src/app/components/paginationButton.scss
@@ -19,10 +19,10 @@
   button {
     font-family: "Stylish", serif;
     font-size: 1.8rem;
-    font-weight: 700;
+    font-weight: bold;
     text-transform: uppercase;
     padding: .5rem 1.8rem;
-    border: 0;
+    border: none;
     border-radius: 4px;
     background-color: #fff;
     cursor: pointer;
