--- a/client/src/app/winners/winners.scss
+++ b/client/src/app/winners/winners.scss
@@ -20,8 +20,10 @@
   margin-top: 1rem;
 }
 
+.winner-header,
 .winner-item {
   display: flex;
+  gap: 0.5em;
   justify-content: space-between;
   align-items: flex-end;
   width: 100%;
