--- a/client/src/app/components/pageDataCounter.scss
+++ b/client/src/app/components/pageDataCounter.scss
@@ -1,9 +1,9 @@
 .page-data-counter {
   display: flex;
   justify-content: flex-start;
-  gap: 3rem;
+  gap: 1rem;
   margin-top: 1rem;
-  width: 35rem;
+  max-width: 35rem;
   font-size: 1.6rem;
   user-select: none;
 
