--- a/client/src/app/winners/winners.scss
+++ b/client/src/app/winners/winners.scss
@@ -30,7 +30,8 @@
   padding: .5rem;
   border-radius: 4px;
   text-align: center;
-  box-shadow: 1px 1px 3px dimgray;
+  //box-shadow: 1px 1px 3px dimgray;
+  background-color: lightgray;
   user-select: none;
 
   .number {
