--- a/client/src/app/car/car.scss
+++ b/client/src/app/car/car.scss
@@ -5,11 +5,11 @@
   box-shadow: 1px 1px 3px dimgray;
   padding: .7rem;
   border-radius: .3rem;
-  row-gap: .7rem;
+  gap: .7rem;
 
   p {
     padding: .1rem 1rem;
-    margin-left: 1.5rem;
+    //margin-left: 1.5rem;
     border: 1px solid black;
     border-radius: 4px;
     font-size: 1.6rem;
@@ -21,7 +21,13 @@
     display: flex;
     width: 100%;
     align-items: center;
-    column-gap: 1rem;
+    gap: 1rem;
+  }
+
+  .start-stop-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
   }
 
   .road {
@@ -74,10 +80,12 @@
     background-color: royalblue;
     cursor: pointer;
     transition: .3s;
+
     &:hover {
       transform: scale(1.05);
     }
   }
+
   //.stop:disabled {
   //  transform: scale(0.95);
   //  background-color: dimgray;
@@ -112,6 +120,31 @@
       &:hover {
         transform: scale(0.95);
       }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .car-item {
+    position: relative;
+
+    p {
+      position: absolute;
+      left: 11rem;
+      top: 3.9rem;
+    }
+
+    .car-road {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .road {
+      width: 100%;
+    }
+
+    .start-stop-wrapper {
+
     }
   }
 }
