--- a/client/src/app/components/carBuilderPanel.scss
+++ b/client/src/app/components/carBuilderPanel.scss
@@ -2,14 +2,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 0.5em;
 
   button {
-    padding: .3rem 1.5rem;
+    padding: .3rem .5rem;
     font-size: 1.6rem;
     font-weight: bold;
     font-family: "Stylish", serif;
     text-transform: uppercase;
-    width: 9rem;
+    //width: 9rem;
+    flex: 1 1 auto;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -46,7 +48,8 @@
   font-weight: 600;
   font-family: "Stylish", serif;
   border-radius: .4rem;
-  width: 25rem;
+  //width: 25rem;
+  flex: 0 2 25rem;
   padding: .3rem 1rem;
   color: #2b2b2b;
   border: none;
@@ -65,6 +68,7 @@
   //border: 2px solid #ccc;
   //border-radius: 50%;
   //box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  flex: 0 0 30px;
   width: 30px;
   height: 30px;
   cursor: pointer;
