--- a/client/src/app/garage/controlPanel.scss
+++ b/client/src/app/garage/controlPanel.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 45rem;
+  max-width: 45rem;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: .5rem;
   padding: 1rem 1.5rem;
