--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -1,11 +1,15 @@
 .page-buttons-container {
   display: flex;
   justify-content: space-between;
+  gap: 2.5rem;
   padding: 1rem 0;
-  width: 30rem;
+  //width: 30rem;
+  max-width: 45rem;
+  margin: 0 auto;
 }
 
 .page-button {
+  flex: 1 0 12rem;
   font-family: "Stylish", serif;
   font-size: 1.6rem;
   font-weight: 600;
