--- a/client/src/app/components/pageDataCounter.scss
+++ b/client/src/app/components/pageDataCounter.scss
@@ -1,9 +1,11 @@
 .page-data-counter {
   display: flex;
-  justify-content: flex-start;
+  //justify-content: flex-start;
+  justify-content: space-around;
   gap: 1rem;
   margin-top: 1rem;
-  max-width: 35rem;
+  max-width: 45rem;
+  width: 100%;
   font-size: 1.6rem;
   user-select: none;
 
