--- a/client/src/app/garage/controlPanel.scss
+++ b/client/src/app/garage/controlPanel.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 1rem;
   max-width: 45rem;
+  width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: .5rem;
   padding: 1rem 1.5rem;
