--- a/client/src/app/garage/garage.scss
+++ b/client/src/app/garage/garage.scss
@@ -4,7 +4,14 @@
   border: 1px solid rgba(255, 255, 255, 0.5);
   padding: 1rem;
   margin: 1rem auto 1.5rem;
-  //width: 100%;
+  width: 100%;
+  max-width: 120rem;
   border-radius: .3rem;
   row-gap: 1rem;
+}
+
+.garage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
