--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   gap: 2.5rem;
-  padding: 1rem 0;
+  padding: .8rem 0;
   //width: 30rem;
   max-width: 45rem;
   margin: 0 auto;
