--- a/client/src/app/components/pageDataCounter.scss
+++ b/client/src/app/components/pageDataCounter.scss
@@ -3,7 +3,7 @@
   //justify-content: flex-start;
   justify-content: space-around;
   gap: 1rem;
-  margin-top: 1rem;
+  margin-top: .8rem;
   max-width: 45rem;
   width: 100%;
   font-size: 1.6rem;
