--- a/client/src/app/garage/garage.scss
+++ b/client/src/app/garage/garage.scss
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   border: 1px solid rgba(255, 255, 255, 0.5);
-  padding: 1rem;
-  margin: 1rem auto 1.5rem;
+  padding: .6rem;
+  margin: .8rem auto 0;
   width: 100%;
   max-width: 120rem;
   border-radius: .3rem;
-  row-gap: 1rem;
+  gap: .5rem;
 }
 
 .garage {
