feat: add footer

--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -2,6 +2,7 @@
   --button-bg-color: #289bc4;
   --button-hover-bg-color: #302993;
   --transparent-bg: rgba(205, 214, 219, 0.5);
+  --border: #969696;
 }
 
 * {
