--- a/client/src/app/chat/chat.scss
+++ b/client/src/app/chat/chat.scss
@@ -10,6 +10,9 @@
 }
 
 .chat-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: .8rem;
   max-width: 100rem;
   width: 100%;
   height: 80vh;
