--- a/client/src/app/chat/header.scss
+++ b/client/src/app/chat/header.scss
@@ -3,8 +3,8 @@
   justify-content: space-between;
   align-items: center;
   gap: .7rem;
-  border-radius: .5rem;
-  border: 1px solid #969696;
+  border-radius: .8rem;
+  border: 1px solid var(--border);
   font-size: 2rem;
   font-weight: bold;
   padding: 1rem .5rem;
