--- a/client/src/app/chat/user-list.scss
+++ b/client/src/app/chat/user-list.scss
@@ -1,4 +1,5 @@
 .user-list {
+  flex: 2 2 30rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -6,8 +7,8 @@
   padding: .5rem;
   border-radius: .8rem;
   border: 1px solid var(--border);
-  max-width: 30rem;
-  width: 100%;
+  //max-width: 30rem;
+  //width: 100%;
   font-size: 1.6rem;
 
   .list {
@@ -34,6 +35,7 @@
 }
 
 .filter {
+  width: 100%;
   font-size: 2rem;
   font-family: "Stylish", serif;
   padding: .4rem 0.8rem;
