--- a/client/src/app/chat/user-list-item.scss
+++ b/client/src/app/chat/user-list-item.scss
@@ -2,6 +2,10 @@
   display: flex;
   gap: .8rem;
   align-items: center;
+  cursor: pointer;
+  background-color: #878787;
+  padding: .2rem .8rem;
+  border-radius: .5rem;
 
   .dot {
     border-radius: 50%;
