--- a/client/src/app/chat/dialog.scss
+++ b/client/src/app/chat/dialog.scss
@@ -16,10 +16,11 @@
   justify-content: space-around;
   padding: .5rem;
   border-bottom: 1px solid var(--border);
+  min-height: 2.9rem;
 
-  .user-status {
-    color: green;
-  }
+  //.user-status {
+  //  color: green;
+  //}
 }
 
 .dialog-content {
