--- a/client/src/app/chat/chat.scss
+++ b/client/src/app/chat/chat.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: .7rem;
@@ -17,11 +18,13 @@
   max-width: 100rem;
   width: 100%;
   height: 80vh;
+  //max-height: 700px;
 }
 
 .chat-content {
   display: flex;
   justify-content: space-between;
   height: 100%;
+  max-height: 68vh;
   gap: .8rem;
 }
