--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -13,6 +13,7 @@
 
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -24,6 +25,24 @@ body {
   opacity: 0;
   pointer-events: none;
 }
-button{
+
+button {
   user-select: none;
+}
+
+::-webkit-scrollbar {
+  width: 6px; /* Ширина вертикального скроллбара */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #bbb9b9;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #807f7f;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
 }
