--- a/client/src/app/login/login.scss
+++ b/client/src/app/login/login.scss
@@ -3,8 +3,10 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
   transition: opacity .2s ease;
 }
 
